--- a/src/styles/Main.module.css
+++ b/src/styles/Main.module.css
@@ -1,15 +1,10 @@
 .main{
   display: grid;
-  padding: 3px;
-  grid-template-rows: 1fr 6fr;
+  grid-template-rows: 75px 1fr;
   min-height: 100vh;
   background-color: beige;
   /* border: 3px dotted red; */
-  row-gap: 8px;
-}
-
-.main > * {
-  border: 3px solid orangered;
+  /* row-gap: 8px; */
 }
 
 .div{
@@ -25,7 +20,9 @@
 }
 
 .todo_board{
-  width: 50%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
   height: 100%;
   place-self: center;
   background-color: blueviolet;
