--- a/src/styles/Todo.module.css
+++ b/src/styles/Todo.module.css
@@ -7,12 +7,17 @@
   padding: 3px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   height: 75px;
   border: 1px solid red;
+  column-gap: 10px;
 }
 
+.text_input{
+  height: 25px;
+  font-size: 1.2rem ;
+}
 
 .add_btn{
   font-size: 1rem;
